unpackaged/main/default/objects/pse__Permission_Control__c/fields/Active_PSA_User__c.field-meta.xml
<CustomField>
    <fullName>Active_PSA_User__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>PSA_Resource_Contact__r.pse__Is_Resource_Active__c</formula>
    <label>Active PSA User</label>
    <type>Checkbox</type>
</CustomField>