unpackaged/main/default/objects/pse__Permission_Control__c/fields/Department_PSA__c.field-meta.xml
<CustomField>
    <fullName>Department_PSA__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>TEXT(PSA_Resource_Contact__r.Department_PSA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (PSA)</label>
    <type>Text</type>
</CustomField>