unpackaged/main/default/objects/pse__Permission_Control__c/fields/Job_Profile__c.field-meta.xml
<CustomField>
    <fullName>Job_Profile__c</fullName>
    <formula>TEXT(PSA_Resource_Contact__r.Job_Profile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Profile</label>
    <type>Text</type>
</CustomField>