unpackaged/main/default/objects/pse__Permission_Control__c/fields/Permission_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Control_Type__c</fullName>
    <inlineHelpText>Stand-alone or cascading Permissions granted to PSA Users. Controlled by Region, Practice, Group, Project, or Resource. Select Permission aligning to functional access being extended. Create additional records for each controlling Object and/or Function.</inlineHelpText>
    <label>Permission Control Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Event Mgmt</fullName>
            </value>
            <value>
                <fullName>Forecast Mgmt</fullName>
            </value>
            <value>
                <fullName>PSA Admin Mgmt (Region)</fullName>
            </value>
            <value>
                <fullName>PSA Admin Mgmt (Practice)</fullName>
            </value>
            <value>
                <fullName>PSA Admin Mgmt (Group)</fullName>
            </value>
            <value>
                <fullName>Project Version &amp; Gantt Mgmt</fullName>
            </value>
            <value>
                <fullName>RR Mgmt (Region)</fullName>
            </value>
            <value>
                <fullName>RR Mgmt (Practice)</fullName>
            </value>
            <value>
                <fullName>RR Mgmt (Group)</fullName>
            </value>
            <value>
                <fullName>Skills Mgmt (Region)</fullName>
            </value>
            <value>
                <fullName>Skills Mgmt (Practice)</fullName>
            </value>
            <value>
                <fullName>Skills Mgmt (Group)</fullName>
            </value>
            <value>
                <fullName>Staffing Mgmt (Region)</fullName>
            </value>
            <value>
                <fullName>Staffing Mgmt (Practice)</fullName>
            </value>
            <value>
                <fullName>Staffing Mgmt (Group)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Entry (Region)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Entry (Practice)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Entry (Group)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Mgmt (Region)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Mgmt (Practice)</fullName>
            </value>
            <value>
                <fullName>T&amp;E Mgmt (Group)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>