unpackaged/main/default/objects/pse__Permission_Control__c/fields/PSA_Resource_Contact__c.field-meta.xml
<CustomField>
    <fullName>PSA_Resource_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the PSA Licensed User's Resource record (Contacts Object), providing a relationship between the Resource and granted Permission Controls within PSA.</description>
    <inlineHelpText>A lookup to the PSA Licensed User's Resource record (Contacts Object), providing a relationship between the Resource and granted Permission Controls within PSA.</inlineHelpText>
    <label>PSA Resource (Contact)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PSA_Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permission Controls: PSA Resource</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>