unpackaged/main/default/objects/pse__Permission_Control__c/fields/PSA_User_Role__c.field-meta.xml
<CustomField>
    <fullName>PSA_User_Role__c</fullName>
    <formula>TEXT(PSA_Resource_Contact__r.PSA_User_Role__c)</formula>
    <inlineHelpText>Populated on ALL PSA Licensed User's Contact Record for management of PSA License usages per Dept + Biz Unit.
If Resource is BILLABLE, also populate 'Billable Resource Role' which is used by Staffing + Resource/Project Planner Functionality.</inlineHelpText>
    <label>PSA User Role</label>
    <type>Text</type>
</CustomField>