unpackaged/main/default/objects/pse__Permission_Control__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <formula>TEXT(PSA_Resource_Contact__r.pse__Resource_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated for BILLABLE Resources only; use with 'Job Profile'.
Consultant, Engagement Consultant, Contractor = Consultant
Principal Consultant = Principal Consultant
Project Manager: Role = PM
NonBillable PSA Licensed Users = update 'PSA User Role'.</inlineHelpText>
    <label>Billable Resource Role</label>
    <type>Text</type>
</CustomField>