unpackaged/main/default/objects/pse__Permission_Control__c/fields/SFDC_User_Active__c.field-meta.xml
<CustomField>
    <fullName>SFDC_User_Active__c</fullName>
    <description>Showing if the linked Salesforce User Record is active or not.  For reporting purposes.</description>
    <formula>pse__User__r.IsActive</formula>
    <label>SFDC User Active</label>
    <type>Checkbox</type>
</CustomField>