unpackaged/main/default/objects/pse__Permission_Control__c/fields/X18_Char_PermCtrl_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_PermCtrl_ID__c</fullName>
    <description>18 Character Record ID for reporting purposes</description>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Char PermCtrl ID</label>
    <type>Text</type>
</CustomField>