unpackaged/main/default/objects/pse__Permission_Control__c/listViews/All_Permission_Controls.listView-meta.xml
<ListView>
    <fullName>All_Permission_Controls</fullName>
    <columns>NAME</columns>
    <columns>Permission_Control_Type__c</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>pse__User__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Billing__c</columns>
    <columns>pse__Invoicing__c</columns>
    <columns>pse__Timecard_Entry__c</columns>
    <columns>pse__Timecard_Ops_Edit__c</columns>
    <columns>pse__Staffing__c</columns>
    <columns>pse__Resource_Request_Entry__c</columns>
    <columns>pse__Skills_And_Certifications_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Permission Controls</label>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>