unpackaged/main/default/objects/pse__Permission_Control__c/listViews/BE_Mgmt_region_OV.listView-meta.xml
<ListView>
    <fullName>BE_Mgmt_region_OV</fullName>
    <columns>NAME</columns>
    <columns>pse__User__c</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>Permission_Control_Type__c</columns>
    <columns>PSA_User_Role__c</columns>
    <columns>Department_PSA__c</columns>
    <columns>Business_Unit_PSA__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Billing__c</columns>
    <columns>pse__Invoicing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>equals</operation>
        <value>Billing Event Mgmt</value>
    </filters>
    <filters>
        <field>Department_PSA__c</field>
        <operation>equals</operation>
        <value>Revenue Accounting</value>
    </filters>
    <filters>
        <field>Business_Unit_PSA__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </filters>
    <label>BE Mgmt (region) OV</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>