unpackaged/main/default/objects/pse__Permission_Control__c/listViews/Forecast_Mgmt_region_All.listView-meta.xml
<ListView>
    <fullName>Forecast_Mgmt_region_All</fullName>
    <columns>NAME</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>pse__User__c</columns>
    <columns>PSA_User_Role__c</columns>
    <columns>pse__Region__c</columns>
    <columns>Department_PSA__c</columns>
    <columns>Business_Unit_PSA__c</columns>
    <columns>Permission_Control_Type__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Forecast_View__c</columns>
    <columns>pse__Forecast_Edit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>equals</operation>
        <value>Forecast Mgmt</value>
    </filters>
    <label>Forecast Mgmt (region) All</label>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>