unpackaged/main/default/objects/pse__Permission_Control__c/listViews/Project_Version_Gantt_Mgmt_region_All.listView-meta.xml
<ListView>
    <fullName>Project_Version_Gantt_Mgmt_region_All</fullName>
    <columns>NAME</columns>
    <columns>Permission_Control_Type__c</columns>
    <columns>pse__User__c</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>PSA_User_Role__c</columns>
    <columns>Department_PSA__c</columns>
    <columns>Business_Unit_PSA__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__View_Task_Manager__c</columns>
    <columns>pse__Edit_Task_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>equals</operation>
        <value>Project Version &amp; Gantt Mgmt</value>
    </filters>
    <label>Project Version/Gantt Mgmt (region) All</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>