unpackaged/main/default/objects/pse__Permission_Control__c/listViews/PSA_Admin_Mgmt_practice_TS.listView-meta.xml
<ListView>
    <fullName>PSA_Admin_Mgmt_practice_TS</fullName>
    <columns>NAME</columns>
    <columns>Permission_Control_Type__c</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>pse__User__c</columns>
    <columns>PSA_User_Role__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Resource_Request_Entry__c</columns>
    <columns>pse__Staffing__c</columns>
    <columns>pse__Skills_And_Certifications_Entry__c</columns>
    <columns>pse__Skills_And_Certifications_View__c</columns>
    <columns>pse__Billing__c</columns>
    <columns>pse__Timecard_Entry__c</columns>
    <columns>pse__Invoicing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>equals</operation>
        <value>PSA Admin Mgmt (Practice)</value>
    </filters>
    <filters>
        <field>pse__Practice__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PSA Admin Mgmt (practice) TS</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>