unpackaged/main/default/objects/pse__Permission_Control__c/listViews/RR_Mgmt_APCJ_Consultant.listView-meta.xml
<ListView>
    <fullName>RR_Mgmt_APCJ_Consultant</fullName>
    <columns>NAME</columns>
    <columns>pse__User__c</columns>
    <columns>PSA_Resource_Contact__c</columns>
    <columns>PSA_User_Role__c</columns>
    <columns>Job_Profile__c</columns>
    <columns>Department_PSA__c</columns>
    <columns>Business_Unit_PSA__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Resource_Request_Entry__c</columns>
    <columns>pse__Skills_And_Certifications_Entry__c</columns>
    <columns>pse__Skills_And_Certifications_View__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Control_Type__c</field>
        <operation>equals</operation>
        <value>RR Mgmt (Region)</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Resource_Role__c</field>
        <operation>equals</operation>
        <value>Consultant</value>
    </filters>
    <filters>
        <field>Job_Profile__c</field>
        <operation>contains</operation>
        <value>I,II,Senior</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>APCJ</value>
    </filters>
    <label>RR Mgmt (APCJ) Consultant</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Super_Admin_Mel_only</group>
    </sharedTo>
</ListView>